add_library(StarObservationSchedulingSolver_flexible_single_night_star_observation_scheduling)
target_sources(StarObservationSchedulingSolver_flexible_single_night_star_observation_scheduling PRIVATE
    instance.cpp
    instance_builder.cpp
    solution.cpp
    algorithm_formatter.cpp)
target_include_directories(StarObservationSchedulingSolver_flexible_single_night_star_observation_scheduling PUBLIC
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(StarObservationSchedulingSolver_flexible_single_night_star_observation_scheduling PUBLIC
    OptimizationTools::utils
    OptimizationTools::containers)
add_library(StarObservationSchedulingSolver::flexible_single_night_star_observation_scheduling ALIAS StarObservationSchedulingSolver_flexible_single_night_star_observation_scheduling)

add_subdirectory(algorithms)

add_executable(StarObservationSchedulingSolver_flexible_single_night_star_observation_scheduling_main)
target_sources(StarObservationSchedulingSolver_flexible_single_night_star_observation_scheduling_main PRIVATE
    main.cpp)
target_link_libraries(StarObservationSchedulingSolver_flexible_single_night_star_observation_scheduling_main PUBLIC
    StarObservationSchedulingSolver_flexible_single_night_star_observation_scheduling_dynamic_programming
    Boost::program_options)
set_target_properties(StarObservationSchedulingSolver_flexible_single_night_star_observation_scheduling_main PROPERTIES OUTPUT_NAME "starobservationschedulingsolver_flexible_single_night_star_observation_scheduling")
install(TARGETS StarObservationSchedulingSolver_flexible_single_night_star_observation_scheduling_main)
