add_library(StarObservationSchedulingSolver_single_night_star_observation_scheduling)
target_sources(StarObservationSchedulingSolver_single_night_star_observation_scheduling PRIVATE
    instance.cpp
    instance_builder.cpp
    solution.cpp
    algorithm_formatter.cpp)
target_include_directories(StarObservationSchedulingSolver_single_night_star_observation_scheduling PUBLIC
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(StarObservationSchedulingSolver_single_night_star_observation_scheduling PUBLIC
    OptimizationTools::utils)
add_library(StarObservationSchedulingSolver::single_night_star_observation_scheduling ALIAS StarObservationSchedulingSolver_single_night_star_observation_scheduling)

add_subdirectory(algorithms)

add_executable(StarObservationSchedulingSolver_single_night_star_observation_scheduling_main)
target_sources(StarObservationSchedulingSolver_single_night_star_observation_scheduling_main PRIVATE
    main.cpp)
target_link_libraries(StarObservationSchedulingSolver_single_night_star_observation_scheduling_main PUBLIC
    StarObservationSchedulingSolver_single_night_star_observation_scheduling_dynamic_programming
    Boost::program_options)
set_target_properties(StarObservationSchedulingSolver_single_night_star_observation_scheduling_main PROPERTIES OUTPUT_NAME "starobservationschedulingsolver_single_night_star_observation_scheduling")
install(TARGETS StarObservationSchedulingSolver_single_night_star_observation_scheduling_main)
