add_library(StarObservationSchedulingSolver_flexible_single_night_star_observation_scheduling_dynamic_programming)
target_sources(StarObservationSchedulingSolver_flexible_single_night_star_observation_scheduling_dynamic_programming PRIVATE
    dynamic_programming.cpp)
target_include_directories(StarObservationSchedulingSolver_flexible_single_night_star_observation_scheduling_dynamic_programming PUBLIC
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(StarObservationSchedulingSolver_flexible_single_night_star_observation_scheduling_dynamic_programming PUBLIC
    StarObservationSchedulingSolver_flexible_single_night_star_observation_scheduling)
add_library(StarObservationSchedulingSolver::flexible_single_night_star_observation_scheduling::dynamic_programming ALIAS StarObservationSchedulingSolver_flexible_single_night_star_observation_scheduling_dynamic_programming)
