add_library(StarObservationSchedulingSolver_single_night_star_observation_scheduling_dynamic_programming)
target_sources(StarObservationSchedulingSolver_single_night_star_observation_scheduling_dynamic_programming PRIVATE
    dynamic_programming.cpp)
target_include_directories(StarObservationSchedulingSolver_single_night_star_observation_scheduling_dynamic_programming PUBLIC
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(StarObservationSchedulingSolver_single_night_star_observation_scheduling_dynamic_programming PUBLIC
    StarObservationSchedulingSolver_single_night_star_observation_scheduling)
add_library(StarObservationSchedulingSolver::single_night_star_observation_scheduling::dynamic_programming ALIAS StarObservationSchedulingSolver_single_night_star_observation_scheduling_dynamic_programming)
