add_library(StarObservationSchedulingSolver_star_observation_scheduling_column_generation)
target_sources(StarObservationSchedulingSolver_star_observation_scheduling_column_generation PRIVATE
    column_generation.cpp)
target_include_directories(StarObservationSchedulingSolver_star_observation_scheduling_column_generation PUBLIC
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(StarObservationSchedulingSolver_star_observation_scheduling_column_generation PUBLIC
    StarObservationSchedulingSolver_star_observation_scheduling
    StarObservationSchedulingSolver_single_night_star_observation_scheduling_dynamic_programming
    ColumnGenerationSolver::columngenerationsolver)
add_library(StarObservationSchedulingSolver::star_observation_scheduling::column_generation ALIAS StarObservationSchedulingSolver_star_observation_scheduling_column_generation)
